apply plugin: 'com.android.application'

android 
{
  compileOptions 
  {
    sourceCompatibility JavaVersion.VERSION_1_8
    targetCompatibility JavaVersion.VERSION_1_8
  }

  compileSdkVersion 30

  defaultConfig 
  {
    buildToolsVersion = "30.0.3"
    applicationId "com.stupidbeauty.hxftpserver"
    minSdkVersion 21
    targetSdkVersion 30
    versionCode 4623
    versionName "4623.2023.4.4"
  } // defaultConfig 

  buildTypes 
  {
    release 
    {
      minifyEnabled false
      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
    }
  }

  return void
}

dependencies 
{
  implementation 'com.github.hxcan:victoriafresh.android:2023.3.13'
  implementation 'com.jakewharton:butterknife:10.2.3'
  annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
  implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
  implementation 'androidx.appcompat:appcompat:1.2.0'
  implementation 'com.github.hxcan:upgrademanager:2023.5.8'
  implementation 'com.github.hxcan:ftpserver:2023.7.8'
  implementation 'com.github.hxcan:feedback:2023.6.35'

//   implementation 'com.github.hxcan:ftpserver:0e976e4'
  
  implementation 'com.github.hxcan:rotatingactiveuser:2021.11.30'
  implementation 'com.upokecenter:cbor:4.2.0'
  implementation 'com.github.hxcan:voiceui:2023.4.27'
  implementation 'com.github.hxcan:CodePosition:2023.3.29'
  implementation 'com.patrickpissurno:ripple-effect:1.3.1'
  implementation "androidx.documentfile:documentfile:1.0.1"
}

// # https://stackoverflow.com/questions/65380359/lomboks-access-to-jdk-compilers-internal-packages-incompatible-with-java-16

// # enable internal JDK API access at runtime
tasks.withType(JavaCompile).configureEach {
    options.fork = true
    options.forkOptions.jvmArgs += [
//         # essential for butterknife
        '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',

//         # if you need Glide or LomBok
//         # these may not be the exact list, but it works for me
        '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
    ]
}
